CJAL-14/11/2018 Finaliza correcion de acentos ortograficos y tool tips del aplicativo

--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/ActualizacionExistencias.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/ActualizacionExistencias.cshtml
@@ -42,7 +42,7 @@
                         <h2>Unidad de Medida</h2>
                         <ul class="breadcrumb padding-0">
                             <li class="breadcrumb-item"><a href="index.html"><i class="zmdi zmdi-home"></i></a></li>
-                            <li class="breadcrumb-item">Almacen</li>
+                            <li class="breadcrumb-item">Almacén</li>
                             <li class="breadcrumb-item">Actualizar Existencias</li>
                         </ul>
                     </div>
@@ -94,7 +94,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <strong>Exitstencias</strong>
+                                            <strong>Existencias</strong>
                                             @Html.TextBoxFor(m => m.Cantidad, new { @class = "form-control" })
                                             @Html.ValidationMessageFor(m => m.Cantidad, "", new { @class = "alert-danger" })
                                         </div>
@@ -178,7 +178,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <input type="text" placeholder="Numero" id="txtNumeroFiltro" class="form-control" />
+                                            <input type="text" placeholder="Número" id="txtNumeroFiltro" class="form-control" />
                                         </div>
                                     </div>
                                 </div>
