--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/MovimientosAlamacen.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/MovimientosAlamacen.cshtml
@@ -24,7 +24,7 @@
                         <h2>Entradas - Salidas</h2>
                         <ul class="breadcrumb padding-0">
                             <li class="breadcrumb-item"><a href=@Url.Action("Inicio", "Home")><i class="zmdi zmdi-home"></i></a></li>
-                            <li class="breadcrumb-item">Almacen</li>
+                            <li class="breadcrumb-item">Almacén</li>
                             <li class="breadcrumb-item">Registro de Movimientos</li>
                         </ul>
                     </div>
@@ -33,7 +33,7 @@
                     <div class="col-lg-12 col-md-12 col-sm-12">
                         <div class="card">
                             <div class="header">
-                                <strong>Movimientos</strong>  del almacen
+                                <strong>Movimientos</strong>  del almacén
                             </div>
                             <div class="body">
                                 <div class="row clearfix">
@@ -73,7 +73,7 @@
                                     </div>
                                     <div class="col-md-4">
                                         <div class="form-group">
-                                            <b>Linea de Productos:</b>
+                                            <b>Línea de Productos:</b>
                                             <select name="IdProductoLinea" class="form-control selectpicker show-tick" data-live-search="true">
                                                 @foreach (var cc in ViewBag.LineasProducto)
                                                 {
