--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/Salida.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/Salida.cshtml
@@ -90,7 +90,7 @@
                                             <thead>
                                                 <tr>
                                                     <td><strong>Producto</strong></td>
-                                                    <td><strong>Ubicaciòn</strong></td>
+                                                    <td><strong>Ubicación</strong></td>
                                                     <td><strong>Unidad</strong></td>
                                                     <td><strong>Requeridos</strong></td>
                                                     <td><strong>Existencias</strong></td>
