--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/SalidaMercancia.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Almacen/SalidaMercancia.cshtml
@@ -25,11 +25,11 @@
         <div class="block-header"> 
             <div class="row clearfix">
                 <div class="col-lg-5 col-md-5 col-sm-12">
-                    <h2>Salida de Mercancia</h2>
+                    <h2>Salida de Mercancía</h2>
                     <ul class="breadcrumb padding-0">
                         <li class="breadcrumb-item"><a href="~/DashBoard/Vista/Dashboard.aspx"><i class="zmdi zmdi-home"></i></a></li>
                         <li class="breadcrumb-item">Almacén</li>
-                        <li class="breadcrumb-item">Salidas de Mercancía</li>
+                        <li class="breadcrumb-item">Salidas de mercancía</li>
                     </ul>
                 </div>
             </div>
