--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Proveedor.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Producto/Proveedor.cshtml
@@ -443,7 +443,7 @@
                                     @Html.ValidationMessageFor(m => m.Rfc, "", new { @class = "alert-danger" })
                                 </div>
                                 <div class="col-md-9">
-                                    <b>Razon Social</b>
+                                    <b>Razón Social</b>
                                     <div class="form-group">
                                         @Html.TextBoxFor(m => m.RazonSocial, new { @class = "form-control", @placeholder = "Razón social" })
                                     </div>
