--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/CuentaContableDTO.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/EditorTemplates/CuentaContableDTO.cshtml
@@ -4,13 +4,13 @@
     <td>@Model.Numero</td>
     <td>@Model.Descripcion</td>
     <td>
-        <a href="@Url.Action("ActivarEditar", "CuentaContable", new { Id = Model.IdCuentaContable })">
+        <a href="@Url.Action("ActivarEditar", "CuentaContable", new { Id = Model.IdCuentaContable })" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
             <i class="material-icons">edit</i>
-            <span class="icon-name"></span>
+            <span>Activar editar</span>
         </a>
-        <a href="@Url.Action("Eliminar", "CuentaContable", new { Id = Model.IdCuentaContable})">
+        <a href="@Url.Action("Eliminar", "CuentaContable", new { Id = Model.IdCuentaContable})" class="tip" role="button" aria-haspopup="true" aria-expanded="false">
             <i class="material-icons">delete</i>
-            <span class="icon-name"></span>
+            <span>Eliminar cuenta contable</span>
         </a>
     </td>
 </tr>
