--- a/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
+++ b/1.Layers/1.1Presentation/1.1.1Web/MVC.Presentacion/Views/Shared/_Layout.cshtml
@@ -95,7 +95,7 @@
                         <ul class="ml-menu">
                             <li>@Html.ActionLink("Existencias", "ActualizacionExistencias", "Almacen")</li>
                             <li>@Html.ActionLink("Entradas-Salidas", "MovimientosAlamacen", "Almacen")</li>
-                            <li>@Html.ActionLink("Salidas de Mercancia", "SalidaMercancia", "Almacen")</li>
+                            <li>@Html.ActionLink("Salidas de Mercancía", "SalidaMercancia", "Almacen")</li>
                         </ul>
                     </li>
                     <li>
@@ -120,9 +120,9 @@
                                 <a href="javascript:void(0);" class="menu-toggle toggle"><i class="material-icons">content_paste</i><span>Producto</span> </a>
                                 <ul class="ml-menu">
                                     <li>@Html.ActionLink("Producto", "Producto", "Producto")</li>
-                                    <li>@Html.ActionLink("Linea", "LineaProducto", "Producto")</li>
+                                    <li>@Html.ActionLink("Línea", "LineaProducto", "Producto")</li>
                                     <li>@Html.ActionLink("Unidad de Medida", "UnidadMedida", "Producto")</li>
-                                    <li>@Html.ActionLink("Categoria", "Categoria", "Producto")</li>
+                                    <li>@Html.ActionLink("Categoría", "Categoria", "Producto")</li>
                                 </ul>
                             </li>
                             <li>@Html.ActionLink("Centro de Costos", "CentroCosto", "CentroCosto")</li>
